Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: 5.15.1
-
Component/s: QML: Tooling
-
Labels:
-
Commits:49391fcc41d871836868452b8300938d0b94f00e (qt/qtdeclarative/dev) b0ad53347fdb26c52c6c0456adf19b049a78ea3d (qt/qtdeclarative/5.15)
Description
Hi,
let key = "aaa" let dict = {[key]:value} // transformed to let dict = { "": value // should be "aaa" };
Attachments
For Gerrit Dashboard: QTBUG-87222 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
316385,6 | qmlformat: Fix computed property names | 5.15 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
316523,3 | qmlformat: Fix computed property names | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |