qmlformat: Fix computed property names

Fixes: QTBUG-87222
Change-Id: If1da02d503041009b82651e1087fb4a1bdd79d59
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit 49391fcc41d871836868452b8300938d0b94f00e)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>