tests/auto/qml/qmlformat/data/propertyNames.formatted.qml
@@ -1,0 +1,14 @@
+Item {
+    function x() {
+        var copiedItem = "copied value";
+        var computedItem = "computedName";
+        var obj = {
+            "identifierName": "identifier value",
+            "string name": "string value",
+            "Infinity": "numeric value",
+            [computedItem]: "computed value",
+            "copiedItem": copiedItem
+        };
+    }
+
+}
